still needs nav button, pc view left and right column height not correct, center align link images in socials, then rework resume and content text

--- a/css folder/mobile.css
+++ b/css folder/mobile.css
@@ -1,14 +1,73 @@
-@media screen and (max-width: 800px) {
-    .column {
-      width: 100%;
-      height: 100%;
-    }
-
-    .vertical-menu {
-        text-indent: 6.5em;
-    }
-
-    .social {
-        text-indent: 7em;
-    }
+body {
+    font-size: calc(16px + 6 * ((100vw - 320px) / 680)); /*calculation for reflexive font size*/
 }
+
+@media screen and (max-width: 300px) {
+   .column {
+        width: 100%;
+        height: 100%;
+   }
+}
+
+@media screen and (min-width: 575px) {
+    .column {
+        display: inline-block;
+        width: 100%;
+        height: 100%;
+    }
+  }
+  
+  /* small screens */
+  
+  @media screen and (min-width: 576px) {
+      .column {
+          widows: 100%;
+          height: 100%;
+      }
+  }
+  
+  /* medium screens */
+  
+  @media screen and (min-width: 768px) {
+      .column {
+          width: 100%;
+          height: 100%;
+      }
+  }
+  
+  /* large screens */
+  
+  @media screen and (min-width: 992px) {
+      .column {
+          height: 100%;
+          width: 100%;
+      }
+  }
+
+     
+  
+  /* x-large screens */
+  
+  @media screen and (min-width: 1200px) {
+    .container {
+        flex-direction: column;
+        position: relative;
+        bottom:0;
+        top:0;
+        left:0;
+        right:0;
+      }
+      .column {
+          height: 100vh;
+      }
+      .right {
+          width: 25%;
+      }
+      .middle {
+          width: 50%;
+          height: 100%;
+      }
+      .left {
+          width: 25%;
+      }
+  }
